--- a/web-resource/configure.html
+++ b/web-resource/configure.html
@@ -37,7 +37,7 @@
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
             <li><a href="/">Overview</a></li>
-            <li><a href="#">Heat Map</a></li>
+            <li><a href="heatmap">Heat Map</a></li>
             <li><a href="#">Statistics</a></li>
             <li class="active"><a href="configure">Configuration <span class="sr-only">(current)</span></a></li>
           </ul>
@@ -51,7 +51,11 @@
 			    <form>
 				  <div class="form-group col-md-4">
 				    <label for="username">Username</label>
-				    <input type="text" class="form-control" id="username" value="{{username}}">
+				    <input type="text" class="form-control" id="username" value="{{user.username}}">
+				  </div>
+				  <div class="form-group col-md-8">
+				    <label for="address">Address</label>
+				    <input type="text" class="form-control" id="username" value="{{user.address}}">
 				  </div>
 				  <div class="col-md-12">
 				  	<button type="submit" class="btn btn-default">Save</button>
@@ -89,13 +93,15 @@
 			  <table class="table table-hover">
 			  	<tr>
 			  		<th>Username</th>
+			  		<th>Address</th>
 			  		<th>Hostname</th>
 			  		<th>Port</th>
 			  	</tr>
 			   {{#extUsers}}
 			  	<tr>
 			  		<td>{{.username}}</td>
-			  		<td>{{.host}}</td>
+			  		<td>{{.address}}</td>
+			  		<td>{{.hostname}}</td>
 			  		<td>{{.port}}</td>
 			  	</tr>
 			  	{{/extUsers}}
@@ -113,13 +119,13 @@
 			  		<th>Type</th>
 			  		<th>Configuration</th>
 			  	</tr>
-			  	{{#localSensor}}
+			  	{{#extSensor}}
 			  	<tr>
 			  		<td>{{.name}}</td>
 			  		<td>{{.type}}</td>
 			  		<td>{{.config}}</td>
 			  	</tr>
-			  	{{/localSensor}}
+			  	{{/extSensor}}
 			  </table>
 			</div>         
         </div>
