--- a/web-resource/index.html
+++ b/web-resource/index.html
@@ -73,7 +73,7 @@
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
             <li class="active"><a href="/">Overview <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Heat Map</a></li>
+            <li><a href="heatmap">Heat Map</a></li>
             <li><a href="#">Statistics</a></li>
             <li><a href="configure">Configuration</a></li>
           </ul>
