added null points in charts
Former-commit-id: 5d9a57b107ed55133634aa7549b57efe30ba5e2e

--- a/web-resource/index.html
+++ b/web-resource/index.html
@@ -22,19 +22,19 @@
 			chartData("min-power-chart", 
 					[
 					 {{#minData}}  
-						{ y: {{.timestamp}}, {{.username}}: {{.data}}/1000 },
+						{ y: {{.timestamp}}, {{.username}}: {{.data}} },
 					{{/minData}}
 					{ y: Date.now() },
 					]
 			);
 			chartData("hour-power-chart", 
 					[{{#hourData}}  
-						{ y: {{.timestamp}}, {{.username}}: {{.data}}/1000 },  
+						{ y: {{.timestamp}}, {{.username}}: {{.data}} },  
 					{{/hourData}}]
 			);
 			chartData("day-power-chart", 
 					[{{#dayData}}  
-						{ y: {{.timestamp}}, {{.username}}: {{.data}}/1000 },
+						{ y: {{.timestamp}}, {{.username}}: {{.data}} },
 					{{/dayData}}]
 			);
 		});
